--- a/interface/src/styles/Home.module.css
+++ b/interface/src/styles/Home.module.css
@@ -1,14 +1,9 @@
-.container {
-  padding: 0 2rem;
-}
-
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -30,18 +25,12 @@
 
 .subtitle {
   color: #0070f3;
-  margin-top: -10px;
+  margin-bottom: -20px;
 }
 
 .title a {
   color: #0070f3;
   text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
 }
 
 .title {
@@ -131,9 +120,4 @@
   .logo img {
     filter: invert(1);
   }
-}
-
-.inputs_box {
-  display: flex;
-  flex-direction: column;
 }
